Compress values using simdcomp
Change the structure of sm_value, which now consists of a buffer (value.v) and
its length (value.b), and introduces the new type sm_tally, which is
equivalent to the old sm_value.

--- a/make.conf.sample
+++ b/make.conf.sample
@@ -16,8 +16,11 @@ BOOST_LIB = /usr/lib
 # Additional headers:
 # - moodycamel's ConcurrentQueue
 # - Folly's ConsumerProducerQueue
+# - simdcomp
 MCQ_INC   = $(HOME)/src/concurrentqueue
 FOLLY_INC = $(HOME)/src/folly
+SIMD_INC  = $(HOME)/src/simdcomp/include
+SIMD_LIB  = $(HOME)/src/simdcomp
 
 # Compilation flags.
 FLAGS = -O2
