Variable-length reads

--- a/make.conf.sample
+++ b/make.conf.sample
@@ -1,8 +1,7 @@
 # Sample make.conf file to be configured depending on the environment in which
 # SMUFIN is executed.
 
-# Length of reads and kmers; kmers should be equal or smaller than 32.
-READ_LEN ?= 100
+# Length of kmers; should be equal or smaller than 32.
 KMER_LEN ?= 30
 
 # Google sparsehash and perftools: paths to headers/libraries.
