--- a/make.conf.sample
+++ b/make.conf.sample
@@ -13,6 +13,10 @@ GPT_LIB = /usr/lib
 BOOST_INC = /usr/include/boost
 BOOST_LIB = /usr/lib
 
+# RocksDB.
+RDB_INC = /usr/include/rocksdb
+RDB_LIB = /usr/lib
+
 # Additional headers:
 # - moodycamel's ConcurrentQueue
 # - Folly's ConsumerProducerQueue
