--- a/make.conf.sample
+++ b/make.conf.sample
@@ -4,24 +4,26 @@
 # Length of kmers; should be equal or smaller than 32.
 KMER_LEN ?= 30
 
-# Google sparsehash: path to headers.
-GSH_INC = /usr/include
+# Path to headers:
+# - Google sparsehash
+# - moodycamel's ConcurrentQueue
+# - Folly's ConsumerProducerQueue
+GSH_INC   = /usr/include
+MCQ_INC   = /usr/include/concurrentqueue
+FOLLY_INC = /usr/include/folly
 
 # Boost: paths to headers/libraries.
 BOOST_INC = /usr/include/boost
 BOOST_LIB = /usr/lib
 
 # RocksDB: paths to headers/libraries.
-RDB_INC = /usr/include/rocksdb
-RDB_LIB = /usr/lib
+ROCKS_INC = /usr/include/rocksdb
+ROCKS_LIB = /usr/lib
 
-# Additional headers:
-# - moodycamel's ConcurrentQueue
-# - Folly's ConsumerProducerQueue
-MCQ_INC   = $(HOME)/src/concurrentqueue
-FOLLY_INC = $(HOME)/src/folly
+# Compiler & linker verbosity.
+VERBOSE ?= 0
 
 # Compilation flags.
-FLAGS = -O2
-# FLAGS = -O3 -march=core-avx2 -DNDEBUG
-# FLAGS = -O3 -mcpu=power8 -DNDEBUG -DPROFILE
+CFLAGS = -O2
+# CFLAGS = -O3 -march=core-avx2
+# CFLAGS = -O3 -mcpu=power8
