Turn MIN_TC and MAX_TN into configuration options

--- a/smufin.conf
+++ b/smufin.conf
@@ -18,6 +18,8 @@ table-size = 12800000000
 cache-size = 106240000000
 
 [filter]
+max-normal-count = 1
+min-tumor-count = 4
 max-k2i-reads = 2000
 
 # vim: ft=dosini
