Support configurable filter formats

--- a/smufin.conf
+++ b/smufin.conf
@@ -31,6 +31,13 @@ table-size = 12800000000
 cache-size = 106240000000
 
 [filter]
+# Format used to store filtering indexes. Two kinds of formats are supported:
+# - plain: In-memory hashtables that are dumped to disk as simple
+#   space-separated plain text files.
+# - rocks: RocksDB-backed databases, optimized for writing, then compacted for
+#   later stages.
+format = rocks
+
 # Candidate kmer filtering/selection based on imbalanced absolute counts with
 # the following criteria: at most «max-normal-count» normal kmers, and at
 # least «min-tumor-count».
