Default to plain filter format

--- a/smufin.conf
+++ b/smufin.conf
@@ -36,7 +36,7 @@ cache-size = 106240000000
 #   space-separated plain text files.
 # - rocks: RocksDB-backed databases, optimized for writing, then compacted for
 #   later stages.
-format = rocks
+format = plain
 
 # Candidate kmer filtering/selection based on imbalanced absolute counts with
 # the following criteria: at most «max-normal-count» normal kmers, and at
