Make group's maximum number of reads configurable

--- a/smufin.conf
+++ b/smufin.conf
@@ -44,9 +44,9 @@ format = plain
 max-normal-count = 1
 min-tumor-count = 4
 
-# Maximum number of reads per kmer. Kmers seen in more than «max-k2i-reads»
+# Maximum number of reads per kmer; kmers seen in more than «max-reads»
 # different reads are discarded when building the filter indexes.
-max-k2i-reads = 2000
+max-reads = 2000
 
 [group]
 # Groups are generated after finding "leader" reads using a window-based
@@ -54,5 +54,11 @@ max-k2i-reads = 2000
 # candidate kmers in a window of «window-len» bases.
 window-min = 7
 window-len = 10
+
+# Maximum number of reads per kmer; reads from kmers with more than
+# «max-reads» reads are dropped from the groups file and marked as such in the
+# results. Note that only reads are dropped, no kmers will be removed. This
+# value should be lower than «filter.max-reads».
+max-reads = 500
 
 # vim: ft=dosini
