--- a/smufin.conf
+++ b/smufin.conf
@@ -26,6 +26,11 @@ data = ./data
 
 exec = count:run,stats
 
+[prune]
+false-positive-rate = 0.05
+all-size = 100000000000
+allowed-size = 10000000000
+
 [count]
 table-size = 12800000000
 cache-size = 106240000000
