Allow disabling count's cache
When running prune there's not as much need to keep the cache since the bloom
filter already filters out most of the data.

--- a/smufin.conf
+++ b/smufin.conf
@@ -32,6 +32,7 @@ all-size = 100000000000
 allowed-size = 10000000000
 
 [count]
+enable-cache = true
 table-size = 12800000000
 cache-size = 106240000000
 
