--- a/test/00-prune-nocache.conf
+++ b/test/00-prune-nocache.conf
@@ -4,11 +4,11 @@ exec = prune:run;count:run,stats
 
 [prune]
 false-positive-rate = 0.05
-all-size = 1000000000
-allowed-size = 100000000
+all-size = 10000
+allowed-size = 1000
 
 [count]
-enable-cache = true
+enable-cache = false
 table-size = 100000000
 cache-size = 1000000000
 
