Provide descriptions for new configuration options

--- a/smufin.conf
+++ b/smufin.conf
@@ -27,14 +27,29 @@ data = ./data
 exec = count:run,stats
 
 [prune]
+# Desired false-positive (FP) probability for both bloom filters, «all» and
+# «allowed». Lower FP rates involve a higher number of hash functions to be
+# calculated, which translates into additional computation to create and
+# access the bloom filters. Note that this is only used as a performance
+# tradeoff; a lower rate doesn't have any impact in the results since later
+# filters address and discard FPs.
 false-positive-rate = 0.05
+
+# Number of expected items in the bloom filters. Higher capacity translates
+# into additional memory. The «all» bloom filter should be approximately an
+# order of magnitude larger than the «allowed» bloom filter.
 all-size = 100000000000
 allowed-size = 10000000000
 
 [count]
+# The count cache keeps track of kmers that are seen only once so as to not to
+# include them in the tables, reducing the overall memory footprint. It's
+# enabled by default and recommended when running standalone counts, but it
+# can be disabled when running with prune.
 enable-cache = true
-table-size = 12800000000
+
 cache-size = 106240000000
+table-size = 12800000000
 
 [filter]
 # Format used to store filtering indexes. Two kinds of formats are supported:
