--- a/smufin.conf
+++ b/smufin.conf
@@ -1,4 +1,7 @@
 [core]
+# Length of k-mers, which is the size of the substrings that reads will be
+# split into in order to be analyzed. The recommended value is in the range of
+# [28, 32]; currently only k-mers of up to length 32 are supported.
 k = 30
 
 # Partitioning is the scaling mechanism that allows distributing the
@@ -48,6 +51,10 @@ allowed-size = 10000000000
 # can be disabled when running with prune.
 enable-cache = true
 
+# Total number of expected items in the cache and table; generally speaking,
+# the cache contains stems seen once or more, while the table contains stems
+# seen more than once (so it's smaller). Sizes may need to be adjusted
+# depending on the input so as to not to over or under-provision the memory.
 cache-size = 106240000000
 table-size = 12800000000
 
