Provide simple explanation about defaults

--- a/smufin.conf
+++ b/smufin.conf
@@ -55,6 +55,8 @@ enable-cache = true
 # the cache contains stems seen once or more, while the table contains stems
 # seen more than once (so it's smaller). Sizes may need to be adjusted
 # depending on the input so as to not to over or under-provision the memory.
+# E.g. an input with ~4,250 million 80bp reads with a coverage of 60x
+# requires a cache of size 106240000000 and a table of size 12800000000.
 cache-size = 106240000000
 table-size = 12800000000
 
