Implement input queue for indexed BAM files
This provides an initial integration with htslib in order to read BAM files as
input. The new input queue allows splitting BAM files into smaller chunks,
and requires reading its BAI index to obtain valid BGZF virtual offsets.

--- a/make.conf.sample
+++ b/make.conf.sample
@@ -19,6 +19,10 @@ BF_LIB = /usr/lib
 ROCKS_INC = /usr/include/rocksdb
 ROCKS_LIB = /usr/lib
 
+# htslib: paths to headers/libraries.
+HTS_INC = /usr/include/htslib
+HTS_LIB = /usr/lib
+
 # Compiler & linker verbosity.
 VERBOSE ?= 0
 
