Enable configurable input format

--- a/smufin.conf
+++ b/smufin.conf
@@ -23,6 +23,8 @@ num-filters = 1
 num-mergers = 1
 num-groupers = 1
 
+input-format = fastq
+
 input = /path/to/input/file
 output = /path/to/output/dir
 data = ./data
