Describe available input formats

--- a/smufin.conf
+++ b/smufin.conf
@@ -23,6 +23,9 @@ num-filters = 1
 num-mergers = 1
 num-groupers = 1
 
+# Input format for normal and tumoral samples. Two formats are available:
+# - fastq: gzipped FASTQ files (recommended)
+# - bam: aligned BAM files with corresponding BAI index (experimental).
 input-format = fastq
 
 input = /path/to/input/file
