Reorganize test suite by stage

--- a/test/04-prune/00-prune-nocache.conf
+++ b/test/04-prune/00-prune-nocache.conf
@@ -1,4 +1,5 @@
 [core]
+input = ./input/00-fastq
 data = ../data
 exec = prune:run;count:run,stats
 
@@ -8,7 +9,7 @@ all-size = 10000
 allowed-size = 1000
 
 [count]
-enable-cache = true
+enable-cache = false
 table-size = 100000000
 cache-size = 1000000000
 
