--- a/test/00-count/00-count.conf
+++ b/test/00-count/00-count.conf
@@ -1,12 +1,10 @@
 [core]
+input = ./input/00-fastq
 data = ../data
-exec = count:run;filter:run,stats
+exec = count:run,stats
 
 [count]
 table-size = 100000000
 cache-size = 1000000000
-
-[filter]
-format = rocks
 
 # vim: ft=dosini
