--- a/test/01-filter/00-filter-rocks.conf
+++ b/test/01-filter/00-filter-rocks.conf
@@ -1,9 +1,13 @@
 [core]
+input = ./input/00-fastq
 data = ../data
-exec = count:run,stats
+exec = count:run;filter:run,stats
 
 [count]
 table-size = 100000000
 cache-size = 1000000000
+
+[filter]
+format = rocks
 
 # vim: ft=dosini
