Include export options in default configuration

--- a/smufin.conf
+++ b/smufin.conf
@@ -65,6 +65,13 @@ enable-cache = true
 cache-size = 106240000000
 table-size = 12800000000
 
+# Limit exported rows to a particular subset of kmers that match the following
+# minimum/maximum frequencies. That is, either the normal count or the tumoral
+# count of the kmer is strictly greater than «export-min» and less than
+# «export-max» (both excluded).
+export-min = 28
+export-max = 32
+
 [filter]
 # Format used to store filtering indexes. Two kinds of formats are supported:
 # - plain: In-memory hashtables that are dumped to disk as simple
