Update test input paths to new format

--- a/test/01-filter/00-filter-plain-bam.conf
+++ b/test/01-filter/00-filter-plain-bam.conf
@@ -1,6 +1,7 @@
 [core]
 input-format = bam
-input = ./input/00-bam
+input-normal = ./input/00_N_insertion.bam
+input-tumor = ./input/00_T_insertion.bam
 data = ../data
 exec = count:run;filter:run,stats
 
