--- a/test/02-merge/00-merge.conf
+++ b/test/02-merge/00-merge.conf
@@ -1,5 +1,6 @@
 [core]
-input = ./input/00-fastq
+input-normal = ./input/00_N_insertion.fq.gz
+input-tumor = ./input/00_T_insertion.fq.gz
 data = ../data
 exec = count:run;filter:run,dump;merge:run,stats
 
