Require long option for input paths

--- a/smufin.conf
+++ b/smufin.conf
@@ -28,7 +28,11 @@ num-groupers = 1
 # - bam: aligned BAM files with corresponding BAI index (experimental).
 input-format = fastq
 
-input = /path/to/input/file
+# Paths to normal and tumoral input files. For multiple files, wildcard
+# expansion is supported, e.g. «file-*.fq.gz».
+input-normal = /path/to/normal/input/files
+input-tumor = /path/to/tumor/input/files
+
 output = /path/to/output/dir
 data = ./data
 
