Include formal definition of the exec format

--- a/smufin.conf
+++ b/smufin.conf
@@ -36,6 +36,11 @@ input-tumor = /path/to/tumor/input/files
 output = /path/to/output/dir
 data = ./data
 
+# Commands to execute, with the following format:
+#   <exec> --> STAGE:<command> | <exec>;<exec>
+#   <command> --> COMMAND | <command>,<command>
+# For a list of available stages and commands, see README.md.
+# E.g. «count:run,dump», «count:restore;filter:run,dump».
 exec = count:run,stats
 
 [prune]
