Allow building a variable number of indexes

--- a/smufin.conf
+++ b/smufin.conf
@@ -89,6 +89,12 @@ export-max = 32
 #   later stages.
 format = plain
 
+# Number of indexes built for each partition. Increasing the number of indexes
+# can speed up the filter stage, potentially slowing down the merge stage.
+# Should be smaller or equal to the number of filter threads,
+# «core.num-filters».
+num-indexes = 1
+
 # Candidate kmer filtering/selection based on imbalanced absolute counts with
 # the following criteria: at most «max-normal-count» normal kmers, and at
 # least «min-tumor-count».
