Make estimated number of groups configurable

--- a/smufin.conf
+++ b/smufin.conf
@@ -118,4 +118,9 @@ window-len = 10
 # value should be lower than «filter.max-reads».
 max-reads = 500
 
+# Estimate number of candidate lead reads, which identify groups. For best
+# performance, this value should be slightly higher than the actual number of
+# candidate leads.
+leads-size = 12800000
+
 # vim: ft=dosini
