Rename filter format/iterator to index

--- a/smufin.conf
+++ b/smufin.conf
@@ -87,7 +87,7 @@ export-max = 32
 #   space-separated plain text files.
 # - rocks: RocksDB-backed databases, optimized for writing, then compacted for
 #   later stages.
-format = plain
+index-format = plain
 
 # Number of indexes built for each partition. Increasing the number of indexes
 # can speed up the filter stage, potentially slowing down the merge stage.
