Fix index format attribute in tests

--- a/test/02-merge/00-merge-rocks-multi.conf
+++ b/test/02-merge/00-merge-rocks-multi.conf
@@ -11,7 +11,7 @@ table-size = 100000000
 cache-size = 1000000000
 
 [filter]
-format = rocks
+index-format = rocks
 num-indexes = 2
 
 # vim: ft=dosini
