--- a/test/02-merge/00-merge-rocks-multi.conf
+++ b/test/02-merge/00-merge-rocks-multi.conf
@@ -2,7 +2,7 @@
 input-normal = ./input/00_N_insertion.fq.gz
 input-tumor = ./input/00_T_insertion.fq.gz
 data = ../data
-exec = count:run;filter:run,dump;merge:run,stats
+exec = merge:run,stats
 
 num-filters = 2
 
