Support configuration of RocksDB threads

--- a/smufin.conf
+++ b/smufin.conf
@@ -123,4 +123,10 @@ max-reads = 500
 # candidate leads.
 leads-size = 12800000
 
+[rocks]
+# Number of RocksDB background threads. High priority threads flush memtables
+# to disk, while low priority threads compact sstables.
+num-threads-high = 1
+num-threads-low = 1
+
 # vim: ft=dosini
