Implement initial support for count annotation
During the count stage, the new «annotate» command will read the FASTQ
file pointed by «count.annotate-input», extract its reads, and query all
kmers against the table. Results for each partition are printed to
«annotate.PID.json» in the output directory.

--- a/smufin.conf
+++ b/smufin.conf
@@ -81,6 +81,10 @@ table-size = 12800000000
 export-min = 28
 export-max = 32
 
+# File to be read during count's annotate. Only sequences in FASTQ format are
+# supported.
+annotate-input = /path/to/annotate/input/file.fastq
+
 [filter]
 # Format used to store filtering indexes. Two kinds of formats are supported:
 # - plain: In-memory hashtables that are dumped to disk as simple
