Enable bidirectional filtering conditions

--- a/smufin.conf
+++ b/smufin.conf
@@ -102,8 +102,10 @@ num-indexes = 1
 # Candidate kmer filtering/selection based on imbalanced absolute counts with
 # the following criteria: at most «max-normal-count» normal kmers, and at
 # least «min-tumor-count».
-max-normal-count = 1
-min-tumor-count = 4
+max-normal-count-a = 1
+min-tumor-count-a = 4
+max-normal-count-b = 0
+min-tumor-count-b = 1
 
 # Maximum number of reads per kmer; kmers seen in more than «max-reads»
 # different reads are discarded when building the filter indexes.
