Allow disabling read quality checking

--- a/smufin.conf
+++ b/smufin.conf
@@ -33,6 +33,9 @@ input-format = fastq
 input-normal = /path/to/normal/input/files
 input-tumor = /path/to/tumor/input/files
 
+# Check input read quality; based on number of bases with a low phred score.
+check-quality = true
+
 output = /path/to/output/dir
 data = ./data
 
