Update tests to new filtering and partitioning

--- a/test/00-count/00-count-bam.conf
+++ b/test/00-count/00-count-bam.conf
@@ -9,4 +9,10 @@ exec = count:run,stats
 table-size = 100000000
 cache-size = 1000000000
 
+[filter]
+max-normal-count-a = 1
+min-tumor-count-a = 4
+max-normal-count-b = 1
+min-tumor-count-b = 1
+
 # vim: ft=dosini
