--- a/test/01-filter/00-filter-plain-bam.conf
+++ b/test/01-filter/00-filter-plain-bam.conf
@@ -11,5 +11,9 @@ cache-size = 1000000000
 
 [filter]
 index-format = plain
+max-normal-count-a = 1
+min-tumor-count-a = 4
+max-normal-count-b = 1
+min-tumor-count-b = 1
 
 # vim: ft=dosini
