--- a/test/02-merge/00-merge-rocks-multi.conf
+++ b/test/02-merge/00-merge-rocks-multi.conf
@@ -13,5 +13,9 @@ cache-size = 1000000000
 [filter]
 index-format = rocks
 num-indexes = 2
+max-normal-count-a = 1
+min-tumor-count-a = 4
+max-normal-count-b = 1
+min-tumor-count-b = 1
 
 # vim: ft=dosini
