--- a/test/04-prune/00-prune-nocache.conf
+++ b/test/04-prune/00-prune-nocache.conf
@@ -14,4 +14,10 @@ enable-cache = false
 table-size = 100000000
 cache-size = 1000000000
 
+[filter]
+max-normal-count-a = 1
+min-tumor-count-a = 4
+max-normal-count-b = 1
+min-tumor-count-b = 1
+
 # vim: ft=dosini
