Enable RocksDB cache and add new config options

--- a/smufin.conf
+++ b/smufin.conf
@@ -137,5 +137,7 @@ leads-size = 12800000
 # to disk, while low priority threads compact sstables.
 num-threads-high = 1
 num-threads-low = 1
+block-cache-size = 536870912
+block-size = 4096
 
 # vim: ft=dosini
