Support per-stage output directories

--- a/smufin.conf
+++ b/smufin.conf
@@ -36,6 +36,8 @@ input-tumor = /path/to/tumor/input/files
 # Check input read quality; based on number of bases with a low phred score.
 check-quality = true
 
+# Path to main directory where temporary and output files will be written.
+# Stages can override their output directory by defining «[stage].output».
 output = /path/to/output/dir
 data = ./data
 
@@ -88,6 +90,9 @@ export-max = 32
 # supported.
 annotate-input = /path/to/annotate/input/file.fastq
 
+# Path to count output. Defaults to «core.output» when not specified.
+# output = /path/to/count/output/dir
+
 [filter]
 # Format used to store filtering indexes. Two kinds of formats are supported:
 # - plain: In-memory hashtables that are dumped to disk as simple
@@ -114,6 +119,13 @@ min-tumor-count-b = 1
 # different reads are discarded when building the filter indexes.
 max-reads = 2000
 
+# Path to filter output. Defaults to «core.output» when not specified.
+# output = /path/to/filter/output/dir
+
+[merge]
+# Path to merge output. Defaults to «core.output» when not specified.
+# output = /path/to/merge/output/dir
+
 [group]
 # Groups are generated after finding "leader" reads using a window-based
 # technique. A read becomes a "leader" if it contains at least «window-min»
@@ -131,6 +143,9 @@ max-reads = 500
 # performance, this value should be slightly higher than the actual number of
 # candidate leads.
 leads-size = 12800000
+
+# Path to group output. Defaults to «core.output» when not specified.
+# output = /path/to/group/output/dir
 
 [rocks]
 # Number of RocksDB background threads. High priority threads flush memtables
