Add more comments to configuration file

--- a/smufin.conf
+++ b/smufin.conf
@@ -17,6 +17,9 @@ k = 30
 num-partitions = 1
 pid = 0
 
+# Number of threads for each stage. Threads in stages prune and count are split
+# between loaders and storers, while other stages only have a single kind of
+# thread.
 num-loaders = 1
 num-storers = 1
 num-filters = 1
@@ -39,6 +42,9 @@ check-quality = true
 # Path to main directory where temporary and output files will be written.
 # Stages can override their output directory by defining «[stage].output».
 output = /path/to/output/dir
+
+# Path to data directory, containing load-balancing mappings and additional
+# configuration files for RocksDB.
 data = ./data
 
 # Commands to execute, with the following format:
