Allow changing number of parallel table conversions

--- a/smufin.conf
+++ b/smufin.conf
@@ -96,6 +96,11 @@ export-max = 32
 # supported.
 annotate-input = /path/to/annotate/input/file.fastq
 
+# Maximum number of threads performing table conversions from stem tables to
+# root tables. Defaults to «core.num-storers», but can be smaller if available
+# memory is low.
+# max-conversions = 1
+
 # Path to count output. Defaults to «core.output» when not specified.
 # output = /path/to/count/output/dir
 
