Update RocksDB configuration to new version

--- a/data/rocks/filter.conf
+++ b/data/rocks/filter.conf
@@ -11,6 +11,8 @@ max_open_files=-1
 max_background_jobs=20
 max_background_flushes=10
 max_background_compactions=10
+compaction_readahead_size=2097152
+# advise_random_on_open=false
 
 [CFOptions "default"]
 compaction_style=kCompactionStyleLevel
