--- a/data/rocks/group.conf
+++ b/data/rocks/group.conf
@@ -1,26 +1,34 @@
 [Version]
-rocksdb_version=5.1.4
+rocksdb_version=5.15.10
 options_file_version=1.1
 
 [DBOptions]
 create_if_missing=true
-disableDataSync=true
 disable_data_sync=true
-max_background_flushes=2
-base_background_compactions=2
-max_background_compactions=4
 WAL_size_limit_MB=0
 WAL_ttl_seconds=0
 max_open_files=-1
+max_background_jobs=20
+max_background_flushes=10
+max_background_compactions=10
+compaction_readahead_size=2097152
+# advise_random_on_open=false
 
 [CFOptions "default"]
-max_write_buffer_number=4
+compaction_style=kCompactionStyleLevel
+max_write_buffer_number=6
+min_write_buffer_number_to_merge=2
+num_levels=4
+level0_file_num_compaction_trigger=8
+level0_slowdown_writes_trigger=20
+level0_stop_writes_trigger=40
 write_buffer_size=67108864
-num_levels=2
-level0_file_num_compaction_trigger=4
-level0_slowdown_writes_trigger=10
-level0_stop_writes_trigger=20
-target_file_size_base=1073741824
-compression=kLZ4Compression
+target_file_size_base=67108864
+max_bytes_for_level_base=536870912
+max_bytes_for_level_multiplier=8
+target_file_size_multiplier=1
+max_successive_merges=0
+report_bg_io_stats=true
+compression=kNoCompression
 
 # vim: ft=dosini
