Turn prefilter into a configuration option

--- a/smufin.conf
+++ b/smufin.conf
@@ -85,6 +85,20 @@ enable-cache = true
 cache-size = 106240000000
 table-size = 12800000000
 
+# Method to convert tables indexed by stem (built during count) to tables
+# indexed by root (used during filter).
+# - mem: in-memory conversion; requires enough memory to hold both, stem and
+#   root tables, during the conversion.
+conversion-mode = mem
+
+# Maximum number of threads performing table conversions from stem tables to
+# root tables. Defaults to «core.num-storers», but can be smaller if available
+# memory is low.
+# max-conversions = 1
+
+# Prefilter tables discarding elements that won't pass filter's condition.
+prefilter = true
+
 # Limit exported rows to a particular subset of kmers that match the following
 # minimum/maximum frequencies. That is, either the normal count or the tumoral
 # count of the kmer is strictly greater than «export-min» and less than
@@ -95,11 +109,6 @@ export-max = 32
 # File to be read during count's annotate. Only sequences in FASTQ format are
 # supported.
 annotate-input = /path/to/annotate/input/file.fastq
-
-# Maximum number of threads performing table conversions from stem tables to
-# root tables. Defaults to «core.num-storers», but can be smaller if available
-# memory is low.
-# max-conversions = 1
 
 # Path to count output. Defaults to «core.output» when not specified.
 # output = /path/to/count/output/dir
