--- a/test/01-filter/00-filter-plain-bam.conf
+++ b/test/01-filter/00-filter-plain-bam.conf
@@ -8,6 +8,7 @@ exec = count:run;filter:run,stats
 [count]
 table-size = 100000000
 cache-size = 1000000000
+prefilter = false
 
 [filter]
 index-format = plain
