--- a/test/04-prune/00-prune-cache.conf
+++ b/test/04-prune/00-prune-cache.conf
@@ -13,6 +13,7 @@ allowed-size = 1000
 enable-cache = true
 table-size = 100000000
 cache-size = 1000000000
+prefilter = false
 
 [filter]
 max-normal-count-a = 1
