--- a/test/00-count/00-count-bam.conf
+++ b/test/00-count/00-count-bam.conf
@@ -8,6 +8,7 @@ exec = count:run,stats
 [count]
 table-size = 100000000
 cache-size = 1000000000
+prefilter = false
 
 [filter]
 max-normal-count-a = 1
