--- a/test/00-count/00-count-prefilter.conf
+++ b/test/00-count/00-count-prefilter.conf
@@ -2,11 +2,12 @@
 input-normal = ./input/00_N_insertion.fq.gz
 input-tumor = ./input/00_T_insertion.fq.gz
 data = ../data
-exec = count:run,prefilter,stats
+exec = count:run,stats
 
 [count]
 table-size = 100000000
 cache-size = 1000000000
+prefilter = true
 
 [filter]
 max-normal-count-a = 1
