--- a/test/00-count/01-count.conf
+++ b/test/00-count/01-count.conf
@@ -7,6 +7,7 @@ exec = count:run,stats
 [count]
 table-size = 100000000
 cache-size = 1000000000
+prefilter = false
 
 [filter]
 max-normal-count-a = 1
