Support stream conversion mode

--- a/smufin.conf
+++ b/smufin.conf
@@ -89,6 +89,9 @@ table-size = 12800000000
 # indexed by root (used during filter).
 # - mem: in-memory conversion; requires enough memory to hold both, stem and
 #   root tables, during the conversion.
+# - stream: dump stem tables to disk, then read contents and load them
+#   directly to root tables; requires less memory and more storage for stem
+#   tables.
 conversion-mode = mem
 
 # Maximum number of threads performing table conversions from stem tables to
