Implement slice conversion mode

--- a/smufin.conf
+++ b/smufin.conf
@@ -92,6 +92,8 @@ table-size = 12800000000
 # - stream: dump stem tables to disk, then read contents and load them
 #   directly to root tables; requires less memory and more storage for stem
 #   tables.
+# - slice: dump stem tables when they reach «table-size»; requires even
+#   less memory and more storage than «stream».
 conversion-mode = mem
 
 # Maximum number of threads performing table conversions from stem tables to
