Change settings to help flush when testing slices

--- a/test/00-count/00-count-slice.conf
+++ b/test/00-count/00-count-slice.conf
@@ -3,10 +3,12 @@ input-normal = ./input/00_N_insertion.fq.gz
 input-tumor = ./input/00_T_insertion.fq.gz
 data = ../data
 exec = count:run,stats
+num-loaders = 2
 
 [count]
+enable-cache = false
 table-size = 10
-cache-size = 1000000000
+cache-size = 1000
 prefilter = false
 conversion-mode = slice
 
